# best-practices-openstack-sdk

./: .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
src/: clouds.yaml  run.py
