[metadata]
name = best_practices_openstack_sdk
summary = Best Practices for Automation with OpenStack SDK
description_file =
    README.md
author = Open Telekom Cloud Ecosystem Squad
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    Open Telekom Cloud, OpenStack SDK, Best practices
